[package]
name = "fly-migrate"
version = "0.1.1"
edition = "2021"
description = "A simple CLI database migration tool for postgresql."
license = "MIT"
repository = "https://github.com/mjhoy/fly"
keywords = ["database", "migration"]

[lib]
name = "fly"
path = "src/lib.rs"

[[bin]]
name = "fly"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.0", features = [ "derive" ] }
dotenv = "0.15.0"
postgres = "0.19.4"
