[workspace]
resolver = "2"
members = [
  "fly-core",
  "fly-cli"
]
default-members = ["fly-core"]

[workspace.dependencies]
clap = { version = "4.2.0", features = [ "derive" ] }
dotenv = "0.15.0"
postgres = "0.19.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
assert_cmd = "2.0.14"
predicates = "3.1.0"
anyhow = "1.0.81"
tempfile = "3.10.1"
thiserror = "1.0.58"
postgres-types = { version = "0.2.6", features = ["derive"] }
