[package]
name = "fly-migrate-core"
version = "0.1.2"
edition = "2021"
description = "A simple CLI database migration tool for postgresql."
license = "MIT"
repository = "https://github.com/mjhoy/fly"
keywords = ["database", "migration"]

[lib]
name = "fly"
path = "src/lib.rs"

[dependencies]
postgres.workspace = true
tracing.workspace = true
thiserror.workspace = true
