[package]
name = "fly-migrate-core"
version = "0.2.0"
edition = "2021"
description = "Core library for fly-migrate, a database migration tool."
license = "MIT"
repository = "https://github.com/mjhoy/fly"
keywords = ["database", "migration"]

[lib]
name = "fly"
path = "src/lib.rs"

[dependencies]
postgres.workspace = true
tracing.workspace = true
thiserror.workspace = true
postgres-types.workspace = true

[dev-dependencies]
rand.workspace = true
